# basecamp-cli

./: .gitignore  CHANGELOG.md  README.md  install.sh  pyproject.toml  requirements.txt  setup.py
basecamp_cli/: __init__.py  api_client.py  auth.py  cli.py  config.py  formatter.py  local_server.py  pagination.py  token_manager.py
docs/: OAUTH_SETUP.md  TESTING.md
tests/: __init__.py  conftest.py  test_api_client.py  test_auth.py  test_cli.py  test_config.py  test_formatter.py  test_token_manager.py
